# parc

./: 005_hardening_status.html  010_getting_started.html  015_workflows.html  020_driver.html  025_preprocessor.html  026_source_ir.html  027_extraction.html  028_scanning.html  030_parser.html  040_ast.html  050_visitor.html  060_locations.html  070_testing.html  080_diagnostics_and_printing.html  090_project_layout.html  100_api_contract.html  110_end_to_end_workflows.html  120_error_surface.html  130_flavor_and_extension_support.html  140_unsupported_cases.html  150_reproducibility.html  160_contributor_workflow.html  170_stable_usage_patterns.html  175_hardening_matrix.html  180_support_tiers.html  190_parser_boundaries.html  200_release_checklist.html  205_readiness_scorecard.html  210_contract_migration.html  404.html  Cargo.toml  Makefile  README.md  RELEASE.md  flake.nix  parc.html  print.html  searcher-09f2665d.js  searchindex-05c88c01.js  toc-aee9c670.js  (+1 more)
.github/workflows/: book.yml  code.yml
book/src/: 005_hardening_status.md  010_getting_started.md  015_workflows.md  020_driver.md  025_preprocessor.md  026_source_ir.md  027_extraction.md  028_scanning.md  070_testing.md  090_project_layout.md  100_api_contract.md  110_end_to_end_workflows.md  140_unsupported_cases.md  150_reproducibility.md  175_hardening_matrix.md  180_support_tiers.md  200_release_checklist.md  205_readiness_scorecard.md  210_contract_migration.md  210_migration_from_bic.md  SUMMARY.md  parc.md
contract-corpus/v2/preservation/: id-golden-vectors.json  ledger.json  source-complete.json  source-partial.json
contract-corpus/v2/preservation/input/: preservation.h
contract-corpus/v2/preservation/probes/: enum-representation.c
src/: astutil.rs  driver.rs  env.rs  lib.rs  loc.rs  parse.rs  print.rs  span.rs  strings.rs
src/ast/: declarations.rs
src/contract/: canonical.rs  codec.rs  complete.rs  compose.rs  corpus.rs  declarations.rs  diagnostics.rs  exact_integer.rs  files.rs  fingerprint.rs  ids.rs  inputs.rs  macros.rs  mod.rs  package.rs  provenance.rs  report.rs  schema.rs  selection.rs  target.rs  tests.rs  types.rs  validate.rs
src/contract/wire/: v2.rs
src/extract/: mod.rs  types.rs
src/ir/: package.rs
src/parser/: mod.rs  prelude.rs  public_api.rs
src/preprocess/: expr.rs  include.rs  lexer.rs  macros.rs  processor.rs
src/scan/: config.rs  mod.rs  traced.rs
src/tests/: closure_ledger.rs  external_tools.rs  failure_matrix_preprocess.rs  failure_matrix_source.rs  full_apps.rs  hostile_corpus.rs  mod.rs  parse_api.rs  reftests.rs  scan_contract.rs  scan_multifile.rs  support.rs  system_headers.rs  system_support.rs
src/visit/: lexical.rs
tools/: run-filtered-test.sh  test-package.sh
