[package]
name = "follang-parc"
version = "0.16.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
edition = "2021"
rust-version = "1.89"
license = "MIT/Apache-2.0"
description = "C language frontend: preprocessing, parsing, and source-level semantic extraction"
readme = "README.md"
include = [
    "/src/**/*.rs",
    "/contract-corpus/**",
    "/Cargo.toml",
    "/LICENSE-*",
    "/README.md",
]
documentation = "https://docs.rs/follang-parc"
homepage = "https://github.com/follang/lang-c"
repository = "https://github.com/follang/lang-c"
keywords = [ "ast", "c", "parser", "ffi", "preprocessing" ]
categories = [ "parser-implementations" ]

[lib]
name = "parc"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "=1.0.145", features = ["raw_value"] }
thiserror = "2"
unicode-normalization = "0.1"

[features]
dev-pegviz = [] # tests only: emit extra output for pegviz
repo-tests = []
system-tests = []
