[package]
name = "follang-parc"
version = "0.16.0"
authors = ["Vickenty Fesunov <kent@setattr.net>"]
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "C language frontend: preprocessing, parsing, and source-level semantic extraction"
readme = "README.md"
publish = false
include = [
    "/src/**/*.rs",
    "/contract-corpus/**",
    "/Cargo.toml",
    "/LICENSE-*",
    "/README.md",
    "/RELEASE.md",
]
documentation = "https://follang.github.io/lang-c/"
homepage = "https://github.com/follang/lang-c"
repository = "https://github.com/follang/lang-c"
keywords = [ "ast", "c", "parser", "ffi", "preprocessing" ]
categories = [ "parser-implementations" ]

[lib]
name = "parc"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "=1.0.145", features = ["raw_value"] }
thiserror = "2"
unicode-normalization = "0.1"

[features]
# These switches select repository test harnesses. They are not consumer
# capabilities; see RELEASE.md for the archive's promised test surface.
dev-pegviz = []
repo-tests = []
system-tests = []
